src/crode/test/invalid/invalidShapePoint.crode
canvas "InvalidShapePoint" width 800 height 600 {
  let snowflake = circle {
    radius 5
    color black
  }

  draw snowflake at (snowflake, 100)
}
